<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="text" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <!-- Size category -->
    <LinearLayout
        android:id="@+id/container_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_size" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Size drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_size"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_qty" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <Button
                android:id="@+id/qty_decrease"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="-"
                android:onClick="decreaseQty"/>
            <!-- Qty field -->
            <EditText
                android:id="@+id/edit_product_qty"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_pet_qty"
                android:inputType="number"
                android:layout_toRightOf="@+id/qty_decrease"/>

            <Button
                android:id="@+id/qty_increase"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="+"
                android:layout_alignParentRight="true"
                android:onClick="increaseQty"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_supplierName"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplierName"
                android:inputType="text" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_supplier_phoneNumber"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_supplierPhoneNumber"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:text="@string/call_supplier"
    android:onClick="callSupplier"/>
</LinearLayout>
